<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
style="@style/loginCard"
app:cardCornerRadius="@dimen/loginCardRadius"
android:elevation="5dp"
android:layout_gravity="center"
android:layout_marginTop="@dimen/loginViewsMargin"
android:layout_marginBottom="@dimen/loginViewsMargin"
android:background="@color/whiteCardColor">

<LinearLayout
    style="@style/linearParent"
    android:layout_gravity="center"
    android:padding="@dimen/loginViewsMargin">

    <TextView
        style="@style/headerTextPrimary"
        android:text="@string/register"
        android:layout_marginTop="@dimen/loginViewsMargin"/>


        <EditText
            style="@style/modifiedEditText"
            android:inputType="text"
            android:maxLines="1"
            android:id="@+id/edt_name"
            android:hint="Name"/>


        <EditText
            android:id="@+id/edt_email"
            style="@style/modifiedEditText"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_marginTop="10dp"
            android:hint="@string/login_email_hint"/>


        <EditText
            style="@style/modifiedEditText"
            android:hint="@string/login_password_hint"
            android:maxLines="1"
            android:layout_marginTop="10dp"
            android:id="@+id/edt_password"
            android:inputType="textPassword"/>


    <Button
        android:id="@+id/btn_register"
        style="@style/loginButton"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="Register" />

    <TextView
        android:id="@+id/tv_login"
        style="@style/parent"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/primaryTextColor"
        android:text="@string/signup_login_hint"
        android:layout_marginTop="@dimen/loginViewsMargin"/>

</LinearLayout>
</LinearLayout>